// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageSearchForm renders results found in custom selectors 1`] = `
<ul
  aria-labelledby="pageSearchForm-resultsLabel"
  class="options"
  id="pageSearchForm-options"
  role="listbox"
  tabindex="-1"
>
  <li
    aria-selected="false"
    id="pageSearchForm-option-0"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           1
        </span>
      </span>
    </div>
    
  </li>
  <li
    aria-selected="false"
    id="pageSearchForm-option-1"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           2
        </span>
      </span>
    </div>
    <div
      class="resultLocation"
    >
      Section 1
    </div>
  </li>
</ul>
`;

exports[`PageSearchForm renders results found in default elements 1`] = `
<ul
  aria-labelledby="pageSearchForm-resultsLabel"
  class="options"
  id="pageSearchForm-options"
  role="listbox"
  tabindex="-1"
>
  <li
    aria-selected="false"
    id="pageSearchForm-option-0"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           1
        </span>
      </span>
    </div>
    
  </li>
  <li
    aria-selected="false"
    id="pageSearchForm-option-1"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           2
        </span>
      </span>
    </div>
    
  </li>
  <li
    aria-selected="false"
    id="pageSearchForm-option-2"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           3
        </span>
      </span>
    </div>
    
  </li>
  <li
    aria-selected="false"
    id="pageSearchForm-option-3"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           4
        </span>
      </span>
    </div>
    
  </li>
  <li
    aria-selected="false"
    id="pageSearchForm-option-4"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           5
        </span>
      </span>
    </div>
    
  </li>
</ul>
`;

exports[`PageSearchForm result locations include accordion sections 1`] = `
<ul
  aria-labelledby="pageSearchForm-resultsLabel"
  class="options"
  id="pageSearchForm-options"
  role="listbox"
  tabindex="-1"
>
  <li
    aria-selected="false"
    id="pageSearchForm-option-0"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           1
        </span>
      </span>
    </div>
    <div
      class="resultLocation"
    >
      Section 1 &gt; Section 2 &gt; Accordion section 1 &gt; Section 3
    </div>
  </li>
  <li
    aria-selected="false"
    id="pageSearchForm-option-1"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           2
        </span>
      </span>
    </div>
    <div
      class="resultLocation"
    >
      Section 1 &gt; Section 2 &gt; Accordion section 2
    </div>
  </li>
</ul>
`;

exports[`PageSearchForm result locations include heading hierarchy 1`] = `
<ul
  aria-labelledby="pageSearchForm-resultsLabel"
  class="options"
  id="pageSearchForm-options"
  role="listbox"
  tabindex="-1"
>
  <li
    aria-selected="false"
    id="pageSearchForm-option-0"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           1
        </span>
      </span>
    </div>
    <div
      class="resultLocation"
    >
      Section 1 &gt; Section 2 &gt; Section 3
    </div>
  </li>
</ul>
`;

exports[`PageSearchForm result locations uses nearest heading 1`] = `
<ul
  aria-labelledby="pageSearchForm-resultsLabel"
  class="options"
  id="pageSearchForm-options"
  role="listbox"
  tabindex="-1"
>
  <li
    aria-selected="false"
    id="pageSearchForm-option-0"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           1
        </span>
      </span>
    </div>
    <div
      class="resultLocation"
    >
      Section 1
    </div>
  </li>
  <li
    aria-selected="false"
    id="pageSearchForm-option-1"
    role="option"
  >
    <div
      class="resultHeader"
    >
      <span>
        <mark
          class=" "
        >
          Test
        </mark>
        <span
          class=""
        >
           2
        </span>
      </span>
    </div>
    <div
      class="resultLocation"
    >
      Section 2
    </div>
  </li>
</ul>
`;
